New lambda fixed. Now more cleanup.