@@ -3,23 +3,23 @@ Title: Acme Appointment Manager
 Purpose: Acme Appointment Manager is used to track customers and associated appointment data, and generate reports to
 aid in business decisons.
 
-Author: Lisa Georgiades
+Author:  Lisa Georgiades
 
-Contact info: TODO: FILL IN LATER
+Contact info:  TODO: FILL IN LATER
 
-Student application version: 1.0
+Student application version:  1.0
 
-Date: June 5, 2022
+Date:  June 5, 2022
 
-IDE including version number:
- (e.g., IntelliJ Community 2020.01)
+IDE:  IntelliJ IDEA Community Edition 2021.1.3
 
-full JDK of version used (e.g., Java SE 17.0.1)
+Full JDK of version used: Java SE 17.0.1+12-LTS-39
 
-JavaFX version compatible with JDK version (e.g. JavaFX-SDK-17.0.1)
+JavaFX version compatible with JDK version:  JavaFX-SDK-17.0.1
 
-Directions:
+Directions: Run java.exe
+"C:\Program Files\Java\jdk-17.0.1\bin\java.exe" --module-path C:/Users/LabUser/Desktop/openjfx-11.0.2_windows-x64_bin-sdk/javafx-sdk-11.0.2/lib --add-modules javafx.fxml,javafx.controls,javafx.graphics "-javaagent:C:\Program Files\JetBrains\IntelliJ IDEA Community Edition 2021.1.3\lib\idea_rt.jar=49168:C:\Program Files\JetBrains\IntelliJ IDEA Community Edition 2021.1.3\bin" -Dfile.encoding=UTF-8 -classpath "C:\Users\LabUser\IdeaProjects\C195\out\production\Acme Appointment Manager;C:\Users\LabUser\Desktop\mysql-connector-java-8.0.25\mysql-connector-java-8.0.25.jar;C:\Users\LabUser\Desktop\javafx-sdk-17.0.1\lib\javafx-swt.jar;C:\Users\LabUser\Desktop\javafx-sdk-17.0.1\lib\javafx.web.jar;C:\Users\LabUser\Desktop\javafx-sdk-17.0.1\lib\javafx.base.jar;C:\Users\LabUser\Desktop\javafx-sdk-17.0.1\lib\javafx.fxml.jar;C:\Users\LabUser\Desktop\javafx-sdk-17.0.1\lib\javafx.media.jar;C:\Users\LabUser\Desktop\javafx-sdk-17.0.1\lib\javafx.swing.jar;C:\Users\LabUser\Desktop\javafx-sdk-17.0.1\lib\javafx.controls.jar;C:\Users\LabUser\Desktop\javafx-sdk-17.0.1\lib\javafx.graphics.jar;C:\Users\LabUser\Desktop\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\src.zip;C:\Users\LabUser\Desktop\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\javafx-swt.jar;C:\Users\LabUser\Desktop\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\javafx.web.jar;C:\Users\LabUser\Desktop\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\javafx.base.jar;C:\Users\LabUser\Desktop\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\javafx.fxml.jar;C:\Users\LabUser\Desktop\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\javafx.media.jar;C:\Users\LabUser\Desktop\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\javafx.swing.jar;C:\Users\LabUser\Desktop\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\javafx.controls.jar;C:\Users\LabUser\Desktop\openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib\javafx.graphics.jar" main.Main
 
-Description of additional report:
+Description of additional report:  The additional report displays a total count of all customers in the system.
 
-MySQL Connector driver version number, including the update number (e.g., mysql-connector-java-8.1.23)
+MySQL Connector driver version number:  mysql-connector-java-8.0.25
